--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     },
     "scripts": {
         "lint": "eslint .",
+        "type-check": "tsc --noEmit",
+        "prepare:husky": "husky install",
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
@@ -29,28 +31,32 @@
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.18.6",
+        "@react-native-community/eslint-config": "^3.2.0",
         "@types/lodash.debounce": "^4.0.7",
-        "@types/react": "~18.0.14",
-        "@types/react-native": "~0.70.6",
+        "@types/react": "^18.0.14",
+        "@types/react-native": "^0.70.6",
+        "eslint": "^8.31.0",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.27.4",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-simple-import-sort": "^8.0.0",
         "expo": "~47.0.9",
-        "husky": "^8.0.1",
+        "husky": "^8.0.3",
         "prettier": "^2.7.1",
-        "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "react-native": "0.70.5",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-native": "^0.70.5",
         "react-native-builder-bob": "^0.17.1",
-        "react-native-web": "~0.18.9",
+        "react-native-web": "^0.18.9",
         "typescript": "^4.6.3"
     },
     "peerDependencies": {
-        "expo": "~47.0.9",
-        "react": "18.1.0",
-        "react-dom": "18.1.0",
-        "react-native": "0.70.5",
+        "expo": "^47.0.9",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-native": "^0.70.5",
         "react-native-vector-icons": "^9.2.0",
-        "react-native-web": "~0.18.9"
+        "react-native-web": "^0.18.9"
     },
     "react-native-builder-bob": {
         "source": "src",
