Update scripts and index.tsx

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "lint": "eslint .",
+        "postinstall": "yarn prepare:husky",
         "type-check": "tsc --noEmit",
         "prepare:husky": "husky install",
         "start": "expo start",
@@ -17,12 +18,9 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "cleanup": "rm -rf lib prepublish",
-        "prepare": "bob build",
         "package": "mkdir -p dist && npm pack --pack-destination=dist",
-        "bundle": "yarn cleanup && yarn prepare",
-        "build": "yarn bundle && yarn package",
-        "do-publish": "npm publish ./dist/webbeetechnologies-bamboo-template-$npm_package_version.tgz --access=private",
-        "release": "yarn build && yarn run do-publish"
+        "bundle": "yarn cleanup && bob build",
+        "build": "yarn bundle && yarn package"
     },
     "files": [
         "lib",
@@ -35,7 +33,7 @@
         "@types/lodash.debounce": "^4.0.7",
         "@types/react": "^18.0.14",
         "@types/react-native": "^0.70.6",
-        "eslint": "^8.31.0",
+        "eslint": "^8.32.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.27.4",
         "eslint-plugin-prettier": "^4.2.1",
@@ -58,42 +56,11 @@
         "react-native-vector-icons": "^9.2.0",
         "react-native-web": "^0.18.9"
     },
-    "react-native-builder-bob": {
-        "source": "src",
-        "output": "lib",
-        "targets": [
-            [
-                "commonjs",
-                {
-                    "configFile": true
-                }
-            ],
-            [
-                "module",
-                {
-                    "configFile": true
-                }
-            ],
-            [
-                "typescript",
-                {
-                    "project": "tsconfig.build.json"
-                }
-            ]
-        ]
-    },
-    "directories": {
-        "lib": "lib"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/webbeetechnologies/bamboo-core.git"
-    },
     "author": "",
     "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/webbeetechnologies/bamboo-core/issues"
-    },
-    "homepage": "https://github.com/webbeetechnologies/bamboo-core#readme",
-    "description": ""
+    "homepage": "https://github.com/webbeetechnologies/blueprint-react-native#readme",
+    "description": "",
+    "dependencies": {
+        "react-native-safe-area-context": "^4.4.1"
+    }
 }
