--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "lint": "eslint .",
+        "test": "jest",
         "postinstall": "yarn prepare:husky",
         "type-check": "tsc --noEmit",
         "prepare:husky": "husky install",
@@ -26,13 +27,19 @@
         "lib",
         "!src"
     ],
+    "jest": {
+        "preset": "react-native"
+    },
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.18.6",
         "@react-native-community/eslint-config": "^3.2.0",
+        "@testing-library/react-native": "^11.5.0",
+        "@types/jest": "^29.2.5",
         "@types/lodash.debounce": "^4.0.7",
         "@types/react": "^18.0.14",
         "@types/react-native": "^0.70.6",
+        "@types/react-test-renderer": "^18.0.0",
         "eslint": "^8.32.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.27.4",
@@ -40,12 +47,14 @@
         "eslint-plugin-simple-import-sort": "^8.0.0",
         "expo": "~47.0.9",
         "husky": "^8.0.3",
+        "jest": "^29.3.1",
         "prettier": "^2.7.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-native": "^0.70.5",
         "react-native-builder-bob": "^0.17.1",
         "react-native-web": "^0.18.9",
+        "react-test-renderer": "^18.2.0",
         "typescript": "^4.6.3"
     },
     "peerDependencies": {
