--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     },
     "scripts": {
         "lint": "eslint .",
-        "test": "jest",
         "postinstall": "yarn prepare:husky",
         "type-check": "tsc --noEmit",
         "prepare:husky": "husky install",
+        "test": "jest",
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
         "web": "expo start --web",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
+        "storybook-watcher": "sb-rn-watcher --config-path .ondevice",
+        "test-storybook": "test-storybook",
         "cleanup": "rm -rf lib prepublish",
         "package": "mkdir -p dist && npm pack --pack-destination=dist",
         "bundle": "yarn cleanup && bob build",
@@ -28,18 +32,58 @@
         "!src"
     ],
     "jest": {
-        "preset": "react-native"
+        "preset": "react-native",
+        "setupFiles": [],
+        "setupFilesAfterEnv": [
+            "@testing-library/jest-native/extend-expect"
+        ],
+        "cacheDirectory": "./cache/jest",
+        "modulePathIgnorePatterns": [
+            "<rootDir>/node_modules",
+            "<rootDir>/lib/",
+            "<rootDir>/dist/"
+        ],
+        "watchPathIgnorePatterns": [
+            "__fixtures__\\/[^/]+\\/(output|error)\\.js"
+        ],
+        "transform": {
+            ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!(@react-native|react-native|react-native-super-grid|react-native-vector-icons|react-native-web-hooks|react-native-actions-sheet|@expo/vector-icons|expo-font|react-native-iphone-x-helper)/)"
+        ]
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@babel/preset-react": "^7.18.6",
+        "@expo/webpack-config": "^0.17.2",
         "@react-native-community/eslint-config": "^3.2.0",
+        "@storybook/addon-actions": "^6.5.10",
+        "@storybook/addon-coverage": "^0.0.7",
+        "@storybook/addon-essentials": "^6.5.10",
+        "@storybook/addon-interactions": "^6.5.13",
+        "@storybook/addon-links": "^6.5.10",
+        "@storybook/addon-ondevice-actions": "^5.3.23",
+        "@storybook/addon-ondevice-controls": "^6.0.1-alpha.0",
+        "@storybook/addon-ondevice-notes": "^5.3.26",
+        "@storybook/addon-react-native-web": "^0.0.18",
+        "@storybook/addon-storyshots": "^6.5.12",
+        "@storybook/builder-webpack4": "^6.5.10",
+        "@storybook/jest": "^0.0.10",
+        "@storybook/manager-webpack4": "^6.5.10",
+        "@storybook/react": "^6.5.10",
+        "@storybook/react-native": "next",
+        "@storybook/test-runner": "^0.7.1",
+        "@storybook/testing-library": "^0.0.13",
+        "@storybook/testing-react": "^1.3.0",
+        "@testing-library/jest-native": "^5.4.1",
         "@testing-library/react-native": "^11.5.0",
         "@types/jest": "^29.2.5",
         "@types/lodash.debounce": "^4.0.7",
         "@types/react": "^18.0.14",
         "@types/react-native": "^0.70.6",
         "@types/react-test-renderer": "^18.0.0",
+        "chromatic": "^6.15.0",
         "eslint": "^8.32.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.27.4",
@@ -47,7 +91,8 @@
         "eslint-plugin-simple-import-sort": "^8.0.0",
         "expo": "~47.0.9",
         "husky": "^8.0.3",
-        "jest": "^29.3.1",
+        "jest": "^27.0.0",
+        "jest-transform-stub": "2",
         "prettier": "^2.7.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
@@ -55,6 +100,8 @@
         "react-native-builder-bob": "^0.17.1",
         "react-native-web": "^0.18.9",
         "react-test-renderer": "^18.2.0",
+        "storybook-addon-performance": "^0.16.1",
+        "storybook-mock-date-decorator": "^1.0.0",
         "typescript": "^4.6.3"
     },
     "peerDependencies": {
@@ -70,6 +117,10 @@
     "homepage": "https://github.com/webbeetechnologies/blueprint-react-native#readme",
     "description": "",
     "dependencies": {
+        "@bambooapp/bamboo-molecules": "^0.1.15",
+        "@shopify/flash-list": "^1.4.1",
+        "@webbeetechnologies/bamboo-molecules": "^0.1.13",
+        "react-native-document-picker": "^8.1.3",
         "react-native-safe-area-context": "^4.4.1"
     }
 }
