--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "type-check": "tsc --noEmit",
         "prepare:husky": "husky install",
         "test": "jest",
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
+        "start": "expo start --dev-client",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
         "web": "expo start --web",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
