--- a/package.json
+++ b/package.json
@@ -1,33 +1,94 @@
 {
-  "name": "@webbeetechnologies/frontend-starter-rn",
-  "version": "0.0.2",
-  "publishConfig": {
-    "private": "restricted",
-    "main": "./lib/commonjs/index.js",
-    "module": "./lib/module/index.js",
-    "types": "./lib/typescript/index.d.ts"
-  },
+  "name": "BlueprintReactNative",
+  "version": "0.0.1",
+  "private": true,
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://github.com/webbeetechnologies/blueprint-react-native#readme",
+  "description": "",
   "scripts": {
-    "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "prepare:husky": "husky install",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
     "test": "jest",
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "lint": "eslint .",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "storybook-watcher": "sb-rn-watcher --config-path .ondevice",
     "test-storybook": "test-storybook",
-    "package": "mkdir -p dist && npm pack --pack-destination=dist",
     "coverage": "cp coverage/storybook/coverage-storybook.json coverage/coverage-storybook.json && nyc report --reporter=html -t coverage --report-dir coverage/lcov-report",
     "test:coverage": "yarn test --coverage && yarn test-storybook --coverage && yarn coverage"
   },
-  "files": [
-    "lib",
-    "!src"
-  ],
+  "dependencies": {
+    "@bambooapp/bamboo-molecules": "^0.1.15",
+    "@react-navigation/drawer": "^6.5.8",
+    "@react-navigation/native": "^6.1.3",
+    "@shopify/flash-list": "1.3.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "react": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-document-picker": "^8.1.3",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.20.13",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-coverage": "^0.0.7",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-controls": "^6.0.1-alpha.0",
+    "@storybook/addon-ondevice-notes": "^5.3.26",
+    "@storybook/addon-react-native-web": "^0.0.18",
+    "@storybook/addon-storyshots": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.10",
+    "@storybook/react-native": "next",
+    "@storybook/test-runner": "^0.7.1",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/testing-react": "^1.3.0",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/react": "^18.0.14",
+    "@types/react-native": "^0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "babel-jest": "^29.4.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.4.2",
+    "jest-transform-stub": "2",
+    "metro-react-native-babel-preset": "^0.75.0",
+    "prettier": "^2.7.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-native": "^0.70.5",
+    "react-native-web": "^0.18.9",
+    "react-test-renderer": "17.0.2",
+    "storybook-addon-performance": "^0.16.1",
+    "storybook-mock-date-decorator": "^1.0.0",
+    "typescript": "^4.9.5"
+  },
   "jest": {
     "coverageReporters": [
       "json"
@@ -52,84 +113,5 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(@react-native|react-native|react-native-super-grid|react-native-vector-icons|react-native-web-hooks|react-native-actions-sheet|@expo/vector-icons|expo-font|react-native-iphone-x-helper|react-native-super-grid|@bambooapp/*)/)"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-coverage": "^0.0.7",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addon-ondevice-actions": "^5.3.23",
-    "@storybook/addon-ondevice-controls": "^6.0.1-alpha.0",
-    "@storybook/addon-ondevice-notes": "^5.3.26",
-    "@storybook/addon-react-native-web": "^0.0.18",
-    "@storybook/addon-storyshots": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.10",
-    "@storybook/react-native": "next",
-    "@storybook/test-runner": "^0.7.1",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/testing-react": "^1.3.0",
-    "@testing-library/jest-native": "^5.4.1",
-    "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^29.2.5",
-    "@types/lodash.debounce": "^4.0.7",
-    "@types/react": "^18.0.14",
-    "@types/react-native": "^0.70.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "chromatic": "^6.15.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "expo": "~47.0.9",
-    "husky": "^8.0.3",
-    "jest": "^27.0.0",
-    "jest-transform-stub": "2",
-    "prettier": "^2.7.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": "^0.70.5",
-    "react-native-web": "^0.18.9",
-    "react-test-renderer": "^18.2.0",
-    "storybook-addon-performance": "^0.16.1",
-    "storybook-mock-date-decorator": "^1.0.0",
-    "typescript": "^4.6.3"
-  },
-  "peerDependencies": {
-    "expo": "^47.0.9",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": "^0.70.5",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.9"
-  },
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://github.com/webbeetechnologies/blueprint-react-native#readme",
-  "description": "",
-  "dependencies": {
-    "@bambooapp/bamboo-molecules": "^0.1.15",
-    "@react-navigation/drawer": "^6.5.8",
-    "@react-navigation/native": "^6.1.3",
-    "@shopify/flash-list": "1.3.1",
-    "expo": "~47.0.12",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-document-picker": "^8.1.3",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "~3.18.0"
   }
 }
